--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,4 @@ after_success:
   - docker push yousseefmostafa2510/multi-nginx
   - docker push youssefmostafa2510/multi-server
   - docker push youssefmostafa2510/multi-worker
+  # Add env vars in travis ci
